--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	compile ("joda-time:joda-time:2.2")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile 'mysql:mysql-connector-java:5.1.31'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile("junit:junit")
 }
 
