--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+//apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'application'
 apply plugin: 'war'
 mainClassName = 'hello.Application'
@@ -32,8 +33,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile 'org.hibernate:hibernate-core:5.2.4.Final'
     compile 'mysql:mysql-connector-java:5.1.31'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
+//    compile 'javassist:javassist:3.12.1.GA'
+    compile 'commons-dbcp:commons-dbcp:1.4'  
     testCompile("junit:junit")
 }
 
