--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port = 8090
+server.port = 8091
 
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/gameofgiving
 spring.datasource.username=root
 spring.datasource.password=
+
+#spring.mvc.view.prefix: /
+#spring.mvc.view.suffix: .jsp
